feat: tìm kiếm sp Full Text Search (tương tự elastic) và ko dấu
thêm cột vào DB